Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - new 'plugin_prereq_phase' and 'plugin_prereq_relationship'
            configuration options, which control whether and how to inject
            plugins used by this bundle into distribution prerequisites

0.132     2017-12-13 07:15:09Z
          - fix test to work with [@Git::VersionManager] 0.003

0.131     2017-09-16 04:29:15Z
          - spelling fix in generated CONTRIBUTING file (thanks, Edward
            Betts!)
          - added .travis.yml to minting profile
          - plugins used by the bundle are now injected into develop-suggests
            prerequisites, rather than develop-requires, so Travis no longer
            feels obliged to install them when testing the built distribution

0.130     2017-08-28 01:13:46Z
          - fix test that is broken with older [CopyFilesFromRelease]
          - fix inverted condition in [Git::Check] configuration (wrong since
            version 0.126)
          - fix airplane mode, broken since version 0.127
          - [@Git::VersionManager] and [MetaProvides::Update] are moved off to
            their own distribution, Dist-Zilla-PluginBundle-Git-VersionManager

0.129     2017-08-21 04:45:42Z
          - fix a new test to avoid triggering the "looks like you're
            installing from cpan, rather than building a distribution in the
            repository" heuristic when using Dist::Zilla (e.g. on older perls)

0.128     2017-08-16 23:39:44Z
          - version extraction and updating plugins now fully extracted out
            into their own plugin bundle, [@Git::VersionManager], to be soon
            released in its own distribution

0.127     2017-08-06 03:16:22Z
          - fix test library's type handling on older Dist::Zilla

0.126     2017-08-02 04:31:30Z
          - minor fixes to distribution prereqs
          - fixed logic for adding default configs for certain plugins and
            their roles
